# ooc-coding

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  configure  configure.ac  lgpl_header.txt  ooc.sln  ooc_win32.aip
addin_xml/: .cproject  xml.c  xml.h  xmlnode.c  xmlnode.h  xmlparser.c  xmlparser.h  xmlwriter.c  xmlwriter.h
addin_xml/implement/: xml.h
addin_xml/unit/: MakefileEclipse.linux  w3ctest.c  xmlparsertest.c  xmltest.c
branches/swstack/: Makefile.in  lgpl.html
docs/: Doxyfile.linux  Makefile.am  Makefile.in  ooc.texinfo
examples/: .cproject  .project
examples/interface/: booklet.c  desktop.c  factory.c  factory.h  interface.vcproj  main.c  note.c  note.h  postit.c  serializable.h
examples/lwmixin/: Makefile.am  flavour.c  flavour.h  icecream.c  lwmixin  lwmixin.vcproj  main.c  tonic.c
examples/mixin/: flavour.c  flavour.h  mixin.vcproj
libs/: .cdtbuild  .cproject  .project  Makefile.am  Makefile.in  NMakefile.MPLAB  exception.c  exception.h  libooc.vcproj  list.c  list.h  mcc30_ext.c  multi_thread.dox  ooc.c  ooc.h  ooc.pc  ooc_libs.mcp  ooc_libs.mcw  ooc_libs_mcc18.mcp  ooc_libs_mcc18.mcw  ooc_libs_mcc30.mcp  ooc_libs_mcc30.mcw  ooc_mplab.mcw  porting.dox  refcounted.c  refcounted.h  signal.c  signal.h  testcase.c  testcase.h  vector.c  vector.h
libs/implement/: list.h  refcounted.h  swstack.h  vector.h
libs/port/: anyc.h  gnuc.h  mcc18.h  mcc32.h  msvc.h
tags/0.9.e/: Makefile.am  Makefile.in
tags/0.9.f/: ChangeLog  README  configure  configure.ac
tags/0.9.g/: config.h
tags/1.0/: ChangeLog
tags/1.1/: ChangeLog  README  config.h  configure  configure.ac
tags/1.1/docs/: Doxyfile.linux
tags/1.1/libs/: Makefile.in  libooc.vcproj  list.c  list.h  mainpage.dox  ooc.c  ooc_libs.mcw  refcounted.c  signal.c  testcase.h  vector.c
tags/1.1/libs/implement/: list.h  refcounted.h  vector.h
tags/1.1/libs/port/: anyc.h
tags/1.1/tools/: .cdtbuild  .cproject  .project  main.c
tags/1.1/tools/template/implement/: sample.h
tags/1.1/tools/template/unit/: Makefile.Windows  Makefile.am  suite.sh
tags/1.1/unit/: Makefile.Windows  Unit.vcproj  bar.c  listtest.c  refcountedtest.c  suite.bat  vectortest.c
tags/1.1/unit_mcc18/: Makefile.am  bar.c  exceptiontest.mcw  foo.c  refcountedtest.mcp  refcountedtest.mcw
tags/1.1/unit_mcc18/implement/: bar.h
tags/1.1/web/: index.html
tags/1.2/: ChangeLog  ooc_win32.aip
tags/1.2/unit/: .cdtproject  Makefile.am  bardaughter.h  listtest_mcc30.mcp  listtest_mcc30_d.mcp  ooctest_mcc30.mcp  refcountedtest_mcc30.mcp  signaltest.c  signaltest_mcc30.mcp  suite.sh  testcasetest_mcc30.mcp  vectortest.c
tags/1.2/unit/implement/: foo.h
tags/1.2a/: configure  configure.ac  ooc_win32.aip
tags/1.2a/tools/: Makefile.am
tags/1.2a/tools/template/: test.c
tags/1.3/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  ooc_win32.aip
tests/: .cdtbuild  Makefile.am  Makefile.in  main.c  manage_test.c  signal_test.c  testclass.c  tests.h  tests.vcproj  vector_test.c
tools/: .cdtbuild  Makefile.am  Makefile.in  main.c  ooc_win32.aip  tools.vcproj
tools/template/: interface.h  minimal.c  mixin.c  mixin.h  private.c  sample.c  test.c
tools/template/implement/: mixin.h
tools/template/unit/: MakefileEclipse.linux  suite.sh
trunk/: ChangeLog  Makefile.am  Makefile.in  README  config.h  config.h.in  configure  configure.ac  ooc.sln  ooc_win32.aip
trunk/addin_xml/: .cproject  .project  ooc_xml_spec  xml.c  xml.h  xmlnode.c  xmlnode.h  xmlparser.c  xmlparser.h  xmlwriter.h
trunk/docs/: Doxyfile.linux  Makefile.am  Makefile.in  ooc.texinfo
trunk/examples/: .cproject  .project  Makefile
trunk/libs/: .cdtbuild  .cproject  Makefile.am  Makefile.in  exception.c  exception.h  libooc.vcproj  list.c  list.h  multi_thread.dox  ooc.c  ooc.h  ooc.pc  ooc_libs.mcp  ooc_libs.mcw  ooc_libs_mcc30.mcp  ooc_libs_mcc30.mcw  ooc_mcc32_d.mcp  ooc_mplab.mcw  porting.dox  refcounted.c  signal.c  signal.h  testcase.c  testcase.h  vector.c  vector.h
trunk/libs/implement/: exception.h  refcounted.h
trunk/libs/port/: anyc.h  gnuc.h  mcc18.h  mcc30.h  mcc32.h  msvc.h
trunk/tests/: .cdtbuild  Makefile.am  Makefile.in  main.c  manage_test.c  signal_test.h  testclass.c  testclass.h  tests.h  tests.vcproj  vector_test.c
trunk/tools/: .cproject  Makefile.am  Makefile.in  main.c  ooc_win32.aip  tools.vcproj
trunk/tools/template/: interface.c  mixin.h  private.c  sample.c  sample.h  test.c
trunk/tools/template/implement/: mixin.h  sample.h
trunk/tools/template/unit/: Makefile  suite.bat
trunk/unit/: .cdtproject  .project  Makefile  Makefile.Windows  Makefile.in  MakefileEclipse.linux  Unit.vcproj  bar.c  bardaughter.c  barson.c  exceptiontest.c  exceptiontest_mcc30.mcp  foo.c  fooexception.c  interfacetest.c  listtest.c  mplabSIMc32Ext.c  ooctest.c  ooctest_mcc30.mcw  probatest.c  refcountedtest.c  refcountedtest_mcc30.mcw  refcountedtest_mcc32.mcp  refcountedtest_mcc32_d.mcp  signaltest.c  signaltest.h  suite.bat  (+14 more)
unit/: .cdtproject  .cproject  .project  Makefile  Makefile.Windows  Makefile.am  Makefile.in  Unit.vcproj  bar.c  bar.h  bardaughter.c  bardaughter.h  barson.c  barson.h  exceptiontest.c  exceptiontest_mcc30.mcp  exceptiontest_mcc30.mcw  foo.c  foo.h  fooexception.c  fooexception.h  interfacetest.c  linux-check-all.sh  listtest.c  listtest_mcc30.mcp  listtest_mcc30.mcw  ooctest.c  ooctest_mcc30.mcp  ooctest_mcc30.mcw  ooctest_mcc32.mcp  refcountedtest.c  refcountedtest_mcc30.mcp  refcountedtest_mcc30_d.mcp  signaltest.c  signaltest_mcc30.mcw  signaltest_mcc32.mcp  suite.bat  suite.sh  testcasetest.c  testcasetest_mcc30.mcw  (+3 more)
unit/implement/: bardaughter.h
unit_mcc18/: Makefile.in  bar.c  bardaughter.c  barson.c  barson.h  exceptiontest.mcw  foo.c  foo.h  fooexception.c  fooexception.h  listtest.c  listtest.mcp  listtest.mcw  listtest_d.mcp  ooctest.c  ooctest.mcw  refcountedtest.mcw  testcasetest.c  testcasetest.mcp  testcasetest.mcw  trivialtest.c  trivialtest.mcw
web/: index.html
(+244 files in other folders)
